--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 html {
   font-size: 95%;
   /*font-family: "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;*/
-  font-family: monospace, Menlo, Monaco, "Courier New", "DejaVu Sans Mono";
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
 }
 
 body {
