--- a/style.css
+++ b/style.css
@@ -23,20 +23,4 @@ img {
   max-width: 38em;
 }
 
-hr {
-    overflow: visible; /* For IE */
-    padding: 0;
-    border: none;
-    border-top: medium double #333;
-    color: #333;
-    text-align: center;
-}
-hr:after {
-    content: "§";
-    display: inline-block;
-    position: relative;
-    top: -0.7em;
-    font-size: 1.5em;
-    padding: 0 0.25em;
-    background: white;
-}
+hr {{height:1px; border:none; color:#000; background-color:#000;}
