--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* updated April 1, 2022 */
-html { font-size: 90%; font-family: "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;*/ }
+html { font-size: 80%; font-family: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", monospace;*/ }
 body { max-width: 80ch; margin: auto; padding: 0 1rem; }
-pre { font-family: monospace, "\534E \6587 \6977 \4F53 ", "KaiTi"; }
 blockquote { font-family: Georgia, "Songti SC", "Noto Serif CJK SC", STSong, "AR PL New Sung" }
 img { max-width: 80ch; }
 hr {height:1px; border:none; color:#000; background-color:#000;}
