--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@ h1,h2,h3,h4,h5,h6 {
   margin: 2em 0 1em;
 }
 
-
-tr {
-  border-bottom: 1px solid;
+table {
+  table-layout: fixed;
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid black;
 }
 
 th,td {
