--- a/style.css
+++ b/style.css
@@ -11,12 +11,11 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 table {
-  table-layout: fixed;
   width: 100%;
   border-collapse: collapse;
   border: 1px solid black;
 }
 
 th,td {
-  padding: 5px;
+  border: 1px solid black;
 }
