--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
+/* updated December 1, 2022 */
+html { font-size: 100%; font-family: Menlo, "Ubuntu Mono", "Source Code Pro", "Droid Sans Mono", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", monospace; line-height:1.2 }
+body { max-width: 80ch; margin: auto; padding: 0 1rem; }
+blockquote { font-family: Georgia, "Songti SC", "Noto Serif CJK SC", STSong, "AR PL New Sung" }
+img { max-width: 80ch; }
+hr {height:1px; border:none; color:#000; background-color:#000;}
 html {
   max-width: 80ch;
   padding: 3em 1em;
   margin: auto;
   line-height: 1.7;
   font-size: 1em;
-}
-
-h1,h2,h3,h4,h5,h6 {
-  margin: 2em 0 1em;
 }
 
 table {
